Return total count in document listings
